[metadata]
name = marconi-swift

# Juno
version = 1.0
summary = Swift Backend for OpenStack Marconi
description-file = README.rst
author = Prashanth Raghu
author-email = p.is.prashanth@gmail.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages = swift

[entry_points]
marconi.queues.data.storage =
    swift = swift.queues.storage.swift.driver:DataDriver

[nosetests]
where=tests
verbosity=2

with-doctest = true

cover-package = marconi
cover-html = true
cover-erase = true
cover-inclusive = true

[pbr]
warnerrors = True

